# kiwi

./: .gitignore  .stignore  jsconfig.json  package-lock.json  package.json  structure.md  vcpkg.json  vite.config.js
.github/workflows/: build-on-release.yml  windows-build-on-release.yml  windows.yml
src/: App.vue  Monitor.vue  main.js  style.css
src-tauri/: .gitignore  Cargo.toml  build.rs  pyproject.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/assets/python/project_template/data/images/: README.md
src-tauri/assets/resources/: README.md
src-tauri/assets/windows/: hooks.nsi
src-tauri/capabilities/: default.json
src-tauri/examples/: capture.rs  code_check.rs  dir.rs  find.rs  find_matching_file.rs  frontend.rs  fs.rs  grpc_client.rs  grpc_server.rs  log.rs  opencv.rs  text.rs  windows.rs
src-tauri/resources/python_modules/: input.py
src-tauri/src/: common.rs  lib.rs  main.rs
src-tauri/src/app/: app.rs  config.rs
src-tauri/src/capture/: crabgrab.rs  engine.rs  mod.rs
src-tauri/src/capture/frame/: color.rs  frame.rs  image.rs  text.rs
src-tauri/src/commands/: capture.rs  find.rs  fs.rs  mod.rs
src-tauri/src/commands/frontend/: app.rs  capture.rs  code.rs  frame.rs  mod.rs  project.rs
src-tauri/src/commands/websocket/: utils.rs
src-tauri/src/extensions/: embedded_file.rs  image_buffer.rs
src-tauri/src/find/: color.rs  common.rs  image.rs  locating_color.rs  locating_colors.rs  mod.rs  text.rs
src-tauri/src/frontend_commands/: app.rs  common.rs  find.rs  fs.rs  install.rs  mod.rs  project.rs
src-tauri/src/frontend_commands/install/: macos.rs  mod.rs  windows.rs
src-tauri/src/grpc/: find.rs  mod.rs  server.rs
src-tauri/src/grpc/find/: find_color.rs  find_locating_color.rs  find_text.rs  global_find_color.rs  global_find_image.rs  global_find_images.rs  global_find_locating_color.rs  image.rs  images.rs  mod.rs
src-tauri/src/grpc/proto/: common.proto
src-tauri/src/input/: engine.rs  enigo.rs  key.rs  mod.rs
src-tauri/src/install/: mod.rs
src-tauri/src/interpreter/: code.rs  interpreter.rs
src-tauri/src/interpreter/python/: code.rs  engine.rs  pyproject.rs  token_ext.rs
src-tauri/src/project/: config.rs  project.rs
src-tauri/src/python_commands/: common.rs  find.rs  input.rs  mod.rs
src-tauri/src/record/: engine.rs  key.rs
src-tauri/src/types/: base64_png.rs  mod.rs  relative_point.rs  size.rs
src-tauri/src/utils/: common.rs  fs.rs  mod.rs
src-tauri/src/websocket/: core.rs  message.rs
src/apis/: app.js
src/components/: NewProject.vue  Setting.vue  Settings.vue
src/stores/: app.js  local.js  state.js
src/utils/: api.js  common.js  fs.js  local-store.js  msg.js  state-store.js
src/views/: Editor.vue  Hello.vue  Home.vue  Install.vue  Log.vue  Monitor.vue  Tree.vue
src/views/app/: Home.vue  (+2 more)
(+16 files in other folders)
