[package]
name = "kiwi"
version = "0.1.0"
description = "A Tauri App"
authors = ["kiwi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kiwi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
tauri = { version = "2.0.6", features = [] }
tauri-plugin-shell = "2.0.2"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tauri-plugin-fs = "2.0.3"
tauri-plugin-dialog = "2.0.3"
tauri-plugin-store = "2.1.0"
tauri-plugin-os = "2"

# others
crabgrab = { git = "https://github.com/qzd1989/CrabGrab.git" }
futures = "0.3"
tokio = { version = "1.41.0", features = ["rt", "macros", "rt-multi-thread"] }
wgpu = "23.0.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
