[package]
name = "kiwi"
version = "0.1.0"
description = "A Tauri App"
authors = ["kiwi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kiwi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["unstable"] }
tauri-plugin-shell = "2.0.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tauri-plugin-fs = "2.0.3"
tauri-plugin-dialog = "2.0.3"
tauri-plugin-store = "2.1.0"
tauri-plugin-os = "2"

# others
crabgrab = { git = "https://github.com/qzd1989/CrabGrab.git", features = [
    "bitmap",
] }
futures = "0.3"
wgpu = "23.0.0"
tokio = { version = "1.41.1", features = ["rt", "macros", "rt-multi-thread"] }
tokio-tungstenite = "0.24.0"
crossbeam-channel = "0.5.13"
lazy_static = "1.5.0"
anyhow = "1.0.93"
image = { version = "0.25.5", features = ["jpeg", "png"] }
base64 = "0.22.1"
opencv = "0.93.4"
rusty-tesseract = { path = "libs/rusty-tesseract" }
enigo = "0.2.1"

[dependencies.pyo3]
version = "0.23.1"
features = ["abi3-py310"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
